<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LingoRise</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LoginText">Log in</string>
    <string name="new_account">Need a new account?</string>
    <string name="signUp">Sign up</string>

    <!-- ALL USERS ACTIVITY -->
    <string name="friend_request">Add</string>
    <string name="send_message">Message</string>

    <!-- REGISTER ACTIVITY -->
    <string name="nativeLanguage">Your native Language</string>
    <string name="learningLanguage">Language you want to learn</string>

    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Korean</item>
        <item>Romanian</item>
    </string-array>
    <string name="title_activity_explore_tab">ExploreTabActivity</string>

    <!-- MENU ITEMS -->
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
